# solarwill-kernel

./: .env.example  .gitignore  README.md  ROADMAP.md  WORKLOG.md  pyproject.toml
.github/workflows/: compare_cases.yml  experiment.yml
docs/: research_charter.md
reports/: week1_stub_vs_gemini_latest.json
scripts/: run_cases.py
src/solarwill/: __main__.py  app.py  cli.py  config.py
src/solarwill/domain/: models.py
tests/: test_constraints.py  test_smoke.py  test_trace.py
tests/fixtures/: sample_cases.json
